--- a/app/views/search/indexData.html.erb
+++ b/app/views/search/indexData.html.erb
@@ -3,9 +3,26 @@
 	<div class="col-md-8 col-md-offset-2">
 		<div class="jumbotron">
 			<h3>Upload XML file to index data using Agolia API:</h3>
-		
+			<br>
+			
+			<div class="row">
+				<div class="col-md-10">
+					<%= form_tag '/upload', { :multipart => true } do %>
+
+					<div class="form-group">
+						<label for="xmlFile" />
+						<%= file_field_tag 'upload[xml]', class: "form-control", placeholder: 'Choose an xml file to upload' %>
+					</div>
+
+					<%= submit_tag "Upload", class: "btn btn-default pull-right" %>
+
+					<% end %>
+				</div> 
+			</div>
+
+
+
 		</div>
 	</div>
-	
 </div>
 
