--- a/app/views/search/indexData.html.erb
+++ b/app/views/search/indexData.html.erb
@@ -1,13 +1,27 @@
 
 <div class="row">
 	<div class="col-md-8 col-md-offset-2">
+			<% if @indexingStatus == 'success' %>
+	
+				<div class="alert alert-success">
+					<h3 class="text-center">Indexing succeded!</h3>
+					<%= @index %>
+				</div>
+			<% end %>
+
+			<% if @indexingStatus == 'failure' %>
+				<div class="alert alert-danger">
+					<h3 class="text-center">Hmm! Something went wrong.</h3>
+				</div>
+			<% end %>
+
 		<div class="jumbotron">
-			<h3>Upload XML file to index data using Agolia API:</h3>
-			<br>
+			<h3>Upload XML file to index data using Algolia API:</h3>
+			<br>		
 			
 			<div class="row">
 				<div class="col-md-10">
-					<%= form_tag '/upload', { :multipart => true } do %>
+					<%= form_tag '/import', { :multipart => true } do %>
 
 					<div class="form-group">
 						<label for="xmlFile" />
