--- a/app/views/search/indexData.html.erb
+++ b/app/views/search/indexData.html.erb
@@ -5,7 +5,8 @@
 	
 				<div class="alert alert-success">
 					<h3 class="text-center">Indexing succeded!</h3>
-					<%= @index %>
+					
+					Total attributes parsed: <%= @records.count %>
 				</div>
 			<% end %>
 
